// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/transaction/index.tsx Render Transaction component 1`] = `
<div>
  <div
    class="transaction"
  >
    <div
      class="header"
    >
      <h3>
        hash
      </h3>
      <div
        class="amount green"
      >
        0
      </div>
    </div>
    <div
      class="date"
    >
      <time
        datetime="1234000"
      >
        1970/01/01 04:20
      </time>
    </div>
  </div>
</div>
`;

exports[`src/components/transaction/index.tsx Render Transaction component 2`] = `
<div>
  <div
    class="transaction"
  >
    <div
      class="header"
    >
      <h3>
        hash
      </h3>
      <div
        class="amount red"
      >
        -9.000000000000001e-7
      </div>
    </div>
    <div
      class="date"
    >
      <time
        datetime="1234000"
      >
        1970/01/01 04:20
      </time>
    </div>
  </div>
</div>
`;
